unpackaged/main/default/objects/Billing_Configuration__c/Billing_Configuration__c.object-meta.xml
<CustomObject>
    <label>Billing Configuration</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Billing Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>