unpackaged/main/default/objects/Billing_Configuration__c/fields/Billing_Product_WHERE__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_WHERE__c</fullName>
    <label>Billing Product WHERE</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>