unpackaged/main/default/objects/Billing_Configuration__c/fields/Custom_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Invoice_Date__c</fullName>
    <label>Custom Invoice Date</label>
    <type>Date</type>
</CustomField>