unpackaged/main/default/objects/Billing_Configuration__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Billing Configurations</relationshipLabel>
    <relationshipName>Billing_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>