unpackaged/main/default/objects/Billing_Configuration__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <label>Invoice Description</label>
    <type>TextArea</type>
</CustomField>