unpackaged/main/default/objects/Billing_Configuration__c/fields/One_Time_Run__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Run? (Code)</label>
    <type>Checkbox</type>
</CustomField>