unpackaged/main/default/objects/Billing_Configuration__c/fields/Recurring_Day__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day__c</fullName>
    <label>Recurring Day</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>