unpackaged/main/default/objects/Billing_Configuration__c/fields/Split_on_CEM__c.field-meta.xml
<CustomField>
    <fullName>Split_on_CEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split on CEM?</label>
    <type>Checkbox</type>
</CustomField>