unpackaged/main/default/objects/Billing_Configuration__c/fields/Split_on_Dim_2__c.field-meta.xml
<CustomField>
    <fullName>Split_on_Dim_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split on Dim 2?</label>
    <type>Checkbox</type>
</CustomField>